[package]
name = "r2d2_redis"
version = "0.15.0"
edition = "2021"
authors = [
    "Steven Fackler <sfackler@gmail.com>",
    "Nev Delap <nevdelap@gmail.com>",
    "Simo Kinnunen <simo@shoqolate.com>",
    "Jan-Erik Rediger <janerik@fnordig.de>"
]
license = "MIT"
description = "Redis support for the r2d2 connection pool"
repository = "https://github.com/sorccu/r2d2-redis"
documentation = "https://docs.rs/r2d2_redis/0.14.0"
keywords = ["redis", "pool", "database", "r2d2"]
include = ["src/**/*", "LICENSE", "Cargo.toml"]
resolver = "2"

[dependencies]
r2d2 = { git = "https://github.com/GopherJ/r2d2", rev = "976ca74a74871d78764da2a040edcadad1af9be9" }
redis = "^0.30"
